styles.css
/* styles.css */
/* Airport Arrivals And Departures Information By Vincent Tseng */
/* https://github.com/VincentTsengCA */
/* */
/* This project uses the OpenSky Network API: */
/* The OpenSky Network, https://opensky-network.org */
/* Matthias Schäfer, Martin Strohmeier, Vincent Lenders, Ivan Martinovic and Matthias Wilhelm. */
/* "Bringing Up OpenSky: A Large-scale ADS-B Sensor Network for Research". */
/* In Proceedings of the 13th IEEE/ACM International Symposium on Information Processing in Sensor Networks (IPSN), pages 83-94, April 2014. */

body {
    background-color: rgb(13, 0, 49);
    background-image: linear-gradient(transparent, rgb(13, 0, 49)), url("images/AirportMorning.JPG");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    background-position-x: center;
    font-family: sans-serif;
    font-size: 150%;
    margin: 0em;
    user-select: none;
}

h1, h2 {
    color: lightgray;
    text-align: center;
    margin-top: 1.25em;
    padding: 1.5em;
    padding-bottom: 1em;
}

.NavigationBar {
    background-color: rgb(0, 61, 140, 0.975);
    padding: 1em;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2em;
    width: fit-content;
    max-width: 65%;
    border-radius: 1em;
    text-align: center;
}

.NavigationBar a {
    color: white;
    font-weight: bold;
    padding: 0.5em;
    text-decoration: none;
}

.NavigationBar a:hover {
    font-variant: small-caps;
    cursor: pointer;
}

.MainContainer {
    background-color: rgb(20, 0, 80, 0.975);
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    max-width: 35em;
    border-radius: 3em;
}

.MainContainer p {
    padding: 2em;
}

.SearchBarContainer {
    text-align: center;
    height: 2.75em;
    max-width: 80%;
    margin-left: auto;
    margin-right: auto;
    padding: 1.5em;
    padding-top: 0em;
}

.SearchBar {
    background-color: white;
    color: rgb(73, 83, 94);
    text-align: center;
    font-size: 115%;
    font-weight: bold;
    border-radius: 1em;
    border: 0.2em solid lightgray;
    height: 100%;
    width: 50%;
    min-width: 11.5em;
}

.LinkToFindICAO {
    color: rgba(255, 255, 255, 0.8);
    text-align: center;
    font-weight: bold;
    font-size: 65%;
    text-decoration: underline;
}

.LinkToFindICAO:hover {
    cursor: pointer;
}

.FilterOption {
    background-color: rgb(0, 61, 140);
    color: white;
    text-align: center;
    font-size: 90%;
    font-weight: bold;
    border-radius: 1em;
    border: none;
    padding: 0.75em;
    margin: 0.5em;
    width: 8em;
}

.FilterOption:hover {
    background-color: rgb(0, 51, 130);
    font-variant: small-caps;
    cursor: pointer;
}

.EnabledFilterOption {
    background-color: rgb(0, 107, 140);
    color: white;
    text-align: center;
    font-size: 90%;
    font-weight: bold;
    border-radius: 1em;
    border: none;
    padding: 0.75em;
    margin: 0.5em;
    width: 8em;
}

.EnabledFilterOption:hover {
    background-color: rgb(0, 97, 130);
    font-variant: small-caps;
    cursor: pointer;
}

.SearchResultsItem {
    background-color: rgb(0, 61, 140);
    color: white;
    font-size: 110%;
    font-weight: bold;
    border-radius: 1em;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 1em;
    padding: 1.5em;
    height: fit-content;
    user-select: text;
}

.TopResultsContainer {
    text-align: center;
    top: 0em;
    width: 100%;
    display: block;
    position: relative;
    padding-bottom: 1em;
}

.LeftResultsContainer {
    text-align: left;
    vertical-align: text-top;
    left: 0em;
    top: 0em;
    width: 50%;
    display: inline-block;
    position: relative;
}

.RightResultsContainer {
    text-align: right;
    vertical-align: text-top;
    right: 0em;
    top: 0em;
    width: 50%;
    display: inline-block;
    position: relative;
}

.BottomResultsContainer {
    text-align: center;
    bottom: 0em;
    width: 100%;
    display: block;
    position: relative;
}

.CallSign, .FlightType, .ICAO24, .DepartureAirport, .ArrivalAirport, .FirstSeen, .LastSeen {
    display: block;
    padding: 0.25em;
}

.FirstSeen, .LastSeen {
    padding-top: 1em;
}

.SearchResultsLabelList {
    color: white;
    font-weight: bold;
    text-align: center;
    padding-bottom: 0.75em;
}

.Footer {
    background-color: rgb(7, 0, 100);
    padding: 1em;
    height: fit-content;
    margin-top: 2.5em;
    padding-top: 1.25em;
    padding-bottom: 1.25em;
    bottom: 0em;
}

.Footer a, h4, p {
    color: white;
    font-weight: bold;
    margin-top: 0.5em;
    margin-left: 0.5em;
    margin-right: 0.5em;
    user-select: text;
}

.Footer a:hover {
    font-variant: small-caps;
}

.Footer p {
    font-size: 70%;
}

@media only screen and (max-width: 800px) {
    body {
        font-size: 130%;
    }

    body:before {
        content: "";
        display: block;
        position: fixed;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        z-index: -1;
        background-size: cover;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
    }

    h1, h2 {
        font-size: 1.75em;
        padding: 1em;
        padding-top: 1.5em;
    }

    #FilterOptionsContainer {
        width: 50%;
    }

    .MainContainer p {
        padding: 0.5em;
    }

    .NavigationBar a {
        font-size: 90%;
    }

    .SearchBar {
        min-width: 75%;
        font-size: 90%;
    }

    .SearchResultsItem {
        padding: 0.75em;
        padding-top: 1.5em;
        padding-bottom: 1.5em;
        font-size: 90%;
    }

    .TopResultsContainer, .LeftResultsContainer, .RightResultsContainer, .BottomResultsContainer {
        text-align: center;
        display: block;
        width: 100%;
        margin-bottom: 1em;
    }

    .TopResultsContainer, .BottomResultsContainer {
        margin-bottom: 0em;
    }
}

